# Project_Version_2

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
ai_models/: README.md
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/ai/: __init__.py  audio.py  fusion.py  pose.py  scoring.py  vision.py
backend/app/alerts/: manager.py
backend/app/api/: __init__.py  alerts.py  auth.py  citizen.py  dispatch.py  incidents.py  poles.py  prediction.py  simulation.py  stream.py  telemetry.py  websocket.py
backend/app/auth/: __init__.py  deps.py  security.py
backend/app/db/: database.py  models.py
backend/app/dispatch/: __init__.py  recommender.py
backend/app/engine/: __init__.py  event_bus.py  incident_pipeline.py
backend/app/prediction/: __init__.py  heatmap.py
backend/app/sensors/: __init__.py  audio.py  base.py  camera.py  motion.py  panic_button.py  telemetry.py
backend/app/services/: __init__.py  audit.py  stream_processor.py
backend/simulations/: __init__.py  run_demo.py  scenarios.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_camera_and_stream.py  test_fusion.py  test_prediction.py
citizen_app/: README.md
datasets/: README.md
deployment/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
docs/: API.md  ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: manifest.webmanifest
frontend/src/: App.tsx  api.ts  index.css  main.tsx  store.ts  useLiveSocket.ts  vite-env.d.ts
(+9 files in other folders)
